module upgrade, fix online entry column width on mobile

--- a/src/contest/scss/layout.scss
+++ b/src/contest/scss/layout.scss
@@ -80,7 +80,7 @@
 			min-width: 300px;
 			max-width: 300px;
 			@media (max-width: 600px) {
-				max-width: auto;
+				max-width: 100%;
 			}
 		}
 	}
